--- a/src/autotech_ros2_pkg/package.xml
+++ b/src/autotech_ros2_pkg/package.xml
@@ -7,6 +7,16 @@
   <maintainer email="Vous@exemple.com">aurelien</maintainer>
   <license>TODO: License declaration</license>
 
+
+  <depend>rclpy</depend>
+  <depend>numpy</depend>
+  <depend>math</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>stable_baselines3</depend>
+
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
